techdebt: [PL-32280]: upgrade test libraries (#46288)
* techdebt:[PL-32280]: upgrade test libraries

* techdebt:[PL-32280]: Replace deprecated methods and classes of mockito

* techdebt:[PL-32280]: Fix failing tests depending on PowerMock

* techdebt:[PL-32280]: UT fixes due to behavioural change in mockito methods

* techdebt:[PL-32280]: Added dependency to mock System class

* techdebt:[PL-32280]: Fix test cases that depends on mocking System class - formatted

* techdebt:[PL-32280]: add jdk17 config for bazel

* techdebt:[PL-32280]: In java 12+ final cannot be removed therefore add alternate way of testing logger

* techdebt:[PL-32280]: Since Java 16 Path.get() start throwing NullPointerException if its first argument is null which was missing in earlier versions as was a bug. Initialised required field with value

* techdebt:[PL-32280]: Removed unused method from MockableTestMixin interface

* techdebt:[PL-32280]: fixes after rebasing with develop